force-app/main/default/objects/PowerVaration__c/PowerVaration__c.object-meta.xml
<CustomObject>
    <description>Oggetto che traccia le variazioni di potenza inviate da SAP</description>
    <label>Variazione Potenza</label>
    <nameField>
        <displayFormat>PV-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Variazione Potenza</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>