force-app/main/default/objects/PowerVaration__c/fields/FiscalCode__c.field-meta.xml
<CustomField>
    <fullName>FiscalCode__c</fullName>
    <description>Codice Fiscale del Cliente</description>
    <label>Codice Fiscale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>