force-app/main/default/objects/PowerVaration__c/fields/NetDebit__c.field-meta.xml
<CustomField>
    <fullName>NetDebit__c</fullName>
    <description>Importo dell&apos;addebito</description>
    <label>Addebito Netto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>