force-app/main/default/objects/PowerVaration__c/fields/Price0__c.field-meta.xml
<CustomField>
    <fullName>Price0__c</fullName>
    <description>Prezzo P0</description>
    <label>P0</label>
    <length>255</length>
    <type>Text</type>
</CustomField>