force-app/main/default/objects/PowerVaration__c/fields/Price1__c.field-meta.xml
<CustomField>
    <fullName>Price1__c</fullName>
    <description>Prezzo P1</description>
    <label>P1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>