force-app/main/default/objects/PowerVaration__c/fields/Price2__c.field-meta.xml
<CustomField>
    <fullName>Price2__c</fullName>
    <description>Prezzo P2</description>
    <label>P2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>