force-app/main/default/objects/PowerVaration__c/fields/PriceM__c.field-meta.xml
<CustomField>
    <fullName>PriceM__c</fullName>
    <description>Prezzo Medio</description>
    <label>PM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>